[gd_scene load_steps=3 format=3 uid="uid://ngubsa75n3or"]

[ext_resource type="LabelSettings" uid="uid://vsftxdp8jchp" path="res://HUDLabel.3.tres" id="1_7y6i7"]
[ext_resource type="Script" path="res://hub.gd" id="1_wharv"]

[node name="HUB" type="CanvasLayer"]
script = ExtResource("1_wharv")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 45.0
text = "0
"
label_settings = ExtResource("1_7y6i7")

[node name="TimeLabel" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 430.0
offset_top = 15.0
offset_right = 470.0
offset_bottom = 52.0
text = "0"
label_settings = ExtResource("1_7y6i7")
horizontal_alignment = 2

[node name="StartLabel" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 38.0
offset_top = 276.0
offset_right = 468.0
offset_bottom = 325.0
text = "Recolecta las monedas"
label_settings = ExtResource("1_7y6i7")

[node name="Button" type="Button" parent="Menu"]
layout_mode = 1
offset_left = 155.0
offset_top = 336.0
offset_right = 354.0
offset_bottom = 383.0
text = "Start
"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="Menu/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
